2003-03-31  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/trial/remote.py: machine-readable trial output to allow
	for the test runner and the results Reporter to be in seperate
	processes.

2003-03-15  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/app.py: Renamed "factory" argument to
	Application.listenUDP() to "proto"

2003-03-13  Tommi Virtanen  <tv@twistedmatrix.com>

	* twisted/tap/procmon.py, twisted/plugins.tml: support for mktapping
	ProcessMonitors.

2003-03-11  Bob Ippolito <bob@redivi.com>

	* twisted/internet/: Replaced apply() in non-deprecated
	twisted.internet modules with Direct Function Calls per
	recommendation from PEP 290.

	* twisted/web/client.py: HTTPPageGetter will now write
	self.factory.postdata to the transport after the headers if the
	attribute is present and is not None.  The factories, getPage and
	downloadPage now accept keyword arguments for method, postdata,
	and headers.  A Content-Length header will be automatically provided
	for the given postdata if one isn't already present.  Note that
	postdata is passed through raw; it is the user's responsibility to
	provide a Content-Type header and preformatted postdata.  This change
	should be backwards compatible.

2003-03-05  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/: reactor.run() now accepts a keyword
	argument, installSignalHandlers, indicating if signal handlers
	should be installed.

2003-03-04  Tommi Virtanen  <tv@twistedmatrix.com>

	* twisted/scripts/mktap.py, twisted/internet/app.py: mktap now
	accepts --uid=0 and --gid=0 to really mean root, has command line
	help for --uid=/--gid=, and understands user and group names in
	addition to numbers.

2003-03-04  Tommi Virtanen  <tv@twistedmatrix.com>

	* twisted/scripts/tap2deb.py, doc/man/tap2deb.1: Option --version=
	collided with global options, renamed to --set-version=.

2003-03-01  Jp Calderone  <exarkun@twistedmatrix.com>
